[package]
name = "si70xx"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.6.15" # 0.6.15 due to build error
cortex-m-semihosting = "0.5.0"
stm32l4xx-hal = { version = "0.6.0", features = ["stm32l4x6"]}
# TODO Try version = "0.7.1"
#stm32l4xx-hal = { version = "0.7.1", features = ["stm32l476"]}
